[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/actors/enemies/marksmen.gd" type="Script" id=1]
[ext_resource path="res://models/weapons/machinegun.obj" type="ArrayMesh" id=2]
[ext_resource path="res://audio/528263__magnuswaker__pound-of-flesh-2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/mixamo/mannequin/scene/Mannequin.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=2]

[node name="Marksmen" type="KinematicBody" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 27.2461
margin_top = 26.0784
margin_right = 67.2461
margin_bottom = 40.0784
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="Timer" parent="."]
wait_time = 0.9

[node name="Injured" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 13.699
pitch_scale = 3.4

[node name="InjuredDelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.529, 0.004 )
shape = SubResource( 2 )

[node name="Mannequin" parent="." instance=ExtResource( 4 )]
transform = Transform( -3, 0, -2.62268e-07, 0, 3, 0, 2.62268e-07, 0, -3, 0, 0, 0 )

[node name="Skeleton" parent="Mannequin" index="0"]
bones/34/bound_children = [ NodePath("BoneAttachment") ]

[node name="BoneAttachment" type="BoneAttachment" parent="Mannequin/Skeleton" index="0"]
transform = Transform( -0.11632, 0.0543683, 0.99172, 0.992914, 0.0307874, 0.114774, -0.0242921, 0.998044, -0.057564, -0.182901, 1.34476, 0.173194 )
bone_name = "mixamorig1_RightHand"

[node name="MeshInstance" type="MeshInstance" parent="Mannequin/Skeleton/BoneAttachment"]
transform = Transform( 0.0750151, 0.29019, 0.0127307, 0.0195213, 0.00808182, -0.299255, -0.289813, 0.0756569, -0.0168626, 0.183613, -0.192906, -0.319506 )

[node name="machinegun" type="MeshInstance" parent="Mannequin/Skeleton/BoneAttachment/MeshInstance"]
transform = Transform( -25, 0, -8.14603e-06, 0, 25, 0, 8.14603e-06, 0, -25, -1.30103, -0.0611759, -1.50758 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
material/14 = null
material/15 = null
material/16 = null
material/17 = null
material/18 = null
material/19 = null
material/20 = null
material/21 = null
material/22 = null
material/23 = null
material/24 = null
material/25 = null
material/26 = null
material/27 = null
material/28 = null
material/29 = null
material/30 = null
material/31 = null
material/32 = null
material/33 = null
material/34 = null
material/35 = null
material/36 = null
material/37 = null
material/38 = null
material/39 = null
material/40 = null
material/41 = null
material/42 = null
material/43 = null

[node name="Muzzel" type="Spatial" parent="Mannequin/Skeleton/BoneAttachment/MeshInstance/machinegun"]
transform = Transform( -0.04, 0, 1.30336e-08, 0, 0.04, 0, -1.30336e-08, 0, -0.04, -0.000265423, 0.00589422, 0.0482969 )

[node name="GunRayPos" type="Position3D" parent="Mannequin/Skeleton/BoneAttachment/MeshInstance/machinegun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01, 0, 0 )

[node name="BodyRayPos" type="Position3D" parent="Mannequin/Skeleton/BoneAttachment/MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
[connection signal="died" from="." to="." method="_on_Marksmen_died"]
[connection signal="injured" from="." to="." method="_on_Marksmen_injured"]
[connection signal="timeout" from="Fire" to="." method="_on_Fire_timeout"]
[connection signal="timeout" from="InjuredDelay" to="." method="_on_InjuredDelayr_timeout"]

[editable path="Mannequin"]
